Add checker and errorprone to apt but disabled